--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ai-chat-config-dashboard",
   "version": "0.1.0",
   "private": true,
-  "engines": { "node": "20.x" },
+ "engines": {  "node": "22"},
   "scripts": {
     "dev": "vite",
     "build": "vite build",
