Update Node.js version and Vite dependencies

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
+--- START OF FILE package.json ---
 {
   "name": "ai-chat-config-dashboard",
   "version": "0.1.0",
   "private": true,
-  "engines": { "node": "22" },
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -56,9 +59,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "@vitejs/plugin-react-swc": "^3.10.2",
-    "vite": "6.3.5"
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "vite": "^5.0.0"
   }
 }
-Update node version for Netlify deploy
-
