--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "typescript": "^5.6.3",
     "vite": "^5.0.0"
   }
 }
