--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,7 @@
 [build]
-  publish = "dist"
-  command = "npm run build"
+  functions = "netlify/functions"
 
-[context.production.environment]
-  NODE_VERSION = "18"
-
-[build.environment]
-  NODE_VERSION = "18"
-  NPM_FLAGS = "--version"
+[[redirects]]
+  from = "/api/prestashop/*"
+  to = "/.netlify/functions/prestashop/:splat"
+  status = 200
