--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18"
+    "node": ">=18"
   },
   "scripts": {
     "dev": "vite",
@@ -54,14 +54,14 @@
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.2",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react-swc": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "typescript": "^5.6.3",
-    "vite": "^5.0.0"
+    "typescript": "^5.6.3"
   }
 }
