Security: Remove hardcoded Supabase keys from source code
- Remove hardcoded anon key from src/utils/supabase/info.tsx
- Remove hardcoded keys from src/components/AIWidget.tsx
- Use environment variables only (no fallback hardcoded values)
- Add SECRETS_SCAN_OMIT_KEYS to netlify.toml for public Supabase keys
- Update ModelParamsCard to use env vars for Supabase URL

The anon key is public by design, but should come from env vars not hardcoded values.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,12 @@
 [build]
   functions = "netlify/functions"
 
+[build.environment]
+  # Whitelist claves públicas de Supabase (anon keys son públicas por diseño)
+  # Estas claves están destinadas a ser expuestas en el cliente y no son secretas
+  # Solo whitelisteamos si NO están hardcodeadas en el código (usamos variables de entorno)
+  SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_ANON_KEY,VITE_SUPABASE_PROJECT_ID"
+
 [[redirects]]
   from = "/api/prestashop/*"
   to = "/.netlify/functions/prestashop/:splat"
