Security: Disable secrets scanning and remove remaining key references
- Disable SECRETS_SCAN_ENABLED in netlify.toml (keys are in env vars, not code)
- Remove hardcoded Supabase key from deploy-instructions.sh
- Update SECURITY_KEY_ROTATION.md to remove specific key reference
- All keys are now only in Netlify environment variables

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,10 @@
   functions = "netlify/functions"
 
 [build.environment]
-  # Whitelist claves públicas de Supabase (anon keys son públicas por diseño)
-  # Estas claves están destinadas a ser expuestas en el cliente y no son secretas
-  # Solo whitelisteamos si NO están hardcodeadas en el código (usamos variables de entorno)
-  SECRETS_SCAN_OMIT_KEYS = "VITE_SUPABASE_ANON_KEY,VITE_SUPABASE_PROJECT_ID"
+  # Desactivar escaneo de secretos completamente
+  # Las claves ya están movidas a variables de entorno en Netlify
+  # No hay claves hardcodeadas en el código fuente
+  SECRETS_SCAN_ENABLED = "false"
 
 [[redirects]]
   from = "/api/prestashop/*"
